Bug 459202 - When opening again after having used the search last time, windows re-layout as if there was an invisible window somewhere
Summary: When opening again after having used the search last time, windows re-layout ...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-overview (other bugs)
Version First Reported In: 5.25.90
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-09-16 05:23 UTC by Jin Liu
Modified: 2022-09-17 14:17 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26
Sentry Crash Report:


Attachments
screencast of the bug (2.18 MB, video/x-matroska)
2022-09-16 05:46 UTC, Jin Liu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jin Liu 2022-09-16 05:23:24 UTC
SUMMARY
Sometimes when entering Overview effect, windows are layouted as if there's one more hidden window. Then windows are re-layouted normally.

STEPS TO REPRODUCE
1. Open one window.
2. Trigger Overview effect.
3. Enter a filter that matches nothing. E.g. press "`".
4. Exit the effect by pressing ESC.
5. Trigger Overview again.

OBSERVED RESULT
The window is layouted as if there's another hidden window. Then immediately relayouted correctly.

EXPECTED RESULT
The window is layouted correctly.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.25.90
KDE Frameworks Version: 5.98.0
Qt Version: 5.15.6
Comment 1 Jin Liu 2022-09-16 05:46:35 UTC
Created attachment 152094 [details]
screencast of the bug
Comment 2 Jin Liu 2022-09-16 10:22:29 UTC
Seems this bug happens whenever the search box in Overview is used.

STEPS TO REPRODUCE
1. Start Dolphin.
2. Trigger Overview effect.
3. Type "dolphin". Press Enter.
4. Trigger Overview effect again.

OBSERVED RESULT
Dolphin thumbnail first moves sideways, then moves to the center.

EXPECTED RESULT
The window is layouted correctly.
Comment 3 Nate Graham 2022-09-16 20:34:37 UTC
Can reproduce with those steps!
Comment 4 ratijas 2022-09-17 11:46:27 UTC
*assuming the voice of Bug Janitor*

ahem…

A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/2965

I used a wrong BUG number at first, so now this needs to be managed manually.
Comment 5 ratijas 2022-09-17 14:14:56 UTC
Git commit de6c0289a0798d1068362e14654feaf7451284dc by ivan tkachenko.
Committed on 17/09/2022 at 11:44.
Pushed by ratijas into branch 'master'.

effects/overview: Implement the searchText backing property

It is used in QML code, just like in windowview (Present Windows)
effect, but developers forgot to copy the implementation in C++
backend.
FIXED-IN: 5.26

M  +2    -0    src/effects/overview/overvieweffect.cpp
M  +4    -1    src/effects/overview/overvieweffect.h
M  +3    -3    src/effects/windowview/windowvieweffect.cpp

https://invent.kde.org/plasma/kwin/commit/de6c0289a0798d1068362e14654feaf7451284dc
Comment 6 ratijas 2022-09-17 14:15:04 UTC
Git commit d7c6a87f395e5223f6b21b23438bd62e248f67b5 by ivan tkachenko.
Committed on 17/09/2022 at 11:44.
Pushed by ratijas into branch 'master'.

effects/overview: Bind to search field using textEdited signal

This special signal was designed to remove the need for such
bikesheddings and workarounds. Use it to react to user-driven changes.
FIXED-IN: 5.26

M  +7    -12   src/effects/overview/qml/ScreenView.qml

https://invent.kde.org/plasma/kwin/commit/d7c6a87f395e5223f6b21b23438bd62e248f67b5
Comment 7 ratijas 2022-09-17 14:16:52 UTC
Git commit e177f7b57ea773d76995636155f78cae10d2bb92 by ivan tkachenko.
Committed on 17/09/2022 at 14:16.
Pushed by ratijas into branch 'Plasma/5.26'.

effects/overview: Implement the searchText backing property

It is used in QML code, just like in windowview (Present Windows)
effect, but developers forgot to copy the implementation in C++
backend.
FIXED-IN: 5.26
(cherry picked from commit de6c0289a0798d1068362e14654feaf7451284dc)

M  +2    -0    src/effects/overview/overvieweffect.cpp
M  +4    -1    src/effects/overview/overvieweffect.h
M  +3    -3    src/effects/windowview/windowvieweffect.cpp

https://invent.kde.org/plasma/kwin/commit/e177f7b57ea773d76995636155f78cae10d2bb92
Comment 8 ratijas 2022-09-17 14:17:00 UTC
Git commit 36d93d6225a8ba5d4b16cc21cc4f029a7db2ee39 by ivan tkachenko.
Committed on 17/09/2022 at 14:16.
Pushed by ratijas into branch 'Plasma/5.26'.

effects/overview: Bind to search field using textEdited signal

This special signal was designed to remove the need for such
bikesheddings and workarounds. Use it to react to user-driven changes.
FIXED-IN: 5.26
(cherry picked from commit d7c6a87f395e5223f6b21b23438bd62e248f67b5)

M  +7    -12   src/effects/overview/qml/ScreenView.qml

https://invent.kde.org/plasma/kwin/commit/36d93d6225a8ba5d4b16cc21cc4f029a7db2ee39