effects/overview: Implement the searchText backing property

It is used in QML code, just like in windowview (Present Windows)
effect, but developers forgot to copy the implementation in C++
backend.

BUG: 459202
FIXED-IN: 5.26
(cherry picked from commit de6c0289a0798d1068362e14654feaf7451284dc)