src/effects/overview/overvieweffect.cpp
@@ -236,6 +236,7 @@ void OverviewEffect::activate()
     setPartialActivationFactor(0.0);
 
     // This one should be the last.
+    m_searchText = QString();
     setRunning(true);
 }
 
@@ -251,6 +252,7 @@ void OverviewEffect::partialActivate(qreal factor)
     setGestureInProgress(true);
 
     // This one should be the last.
+    m_searchText = QString();
     setRunning(true);
 }
 
