src/effects/windowview/windowvieweffect.cpp
@@ -335,7 +335,7 @@ void WindowViewEffect::activate(const QStringList &windowIds)
     }
     if (!internalIds.isEmpty()) {
         m_windowIds = internalIds;
-        m_searchText = "";
+        m_searchText = QString();
         setRunning(true);
     }
 }
@@ -353,7 +353,7 @@ void WindowViewEffect::activate()
     setPartialActivationFactor(0);
 
     // This one should be the last.
-    m_searchText = "";
+    m_searchText = QString();
     setRunning(true);
 }
 
@@ -369,7 +369,7 @@ void WindowViewEffect::partialActivate(qreal factor)
     setGestureInProgress(true);
 
     // This one should be the last.
-    m_searchText = "";
+    m_searchText = QString();
     setRunning(true);
 }
 
